# Project_signals

./: .gitignore  ADD_SSH_KEY_TO_GITHUB.md  GITHUB_AUTH_SETUP.md  GITHUB_SETUP_GUIDE.md  NETLIFY_DEPLOYMENT.md  PUSH_INSTRUCTIONS.md  README.md  netlify.toml  package-lock.json  package.json
backend/: __init__.py  pyproject.toml
backend/adapters/: __init__.py
backend/adapters/marketdata/: __init__.py
backend/adapters/webhooks/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/api/v1/: __init__.py  router.py  routes_accounts.py  routes_backtests.py  routes_brokers.py  routes_health.py  routes_instruments.py  routes_orders.py  routes_webhooks.py
backend/app/config/: __init__.py  settings.py
backend/app/schemas/: __init__.py  accounts.py  backtests.py  brokers.py  instruments.py  orders.py
backend/app/services/: __init__.py  backtesting.py  brokers.py  instruments.py  registry.py  trading.py  webhooks.py
backend/core/: __init__.py
backend/core/backtesting/: __init__.py  runner.py
backend/core/execution/: __init__.py  engine.py  models.py
backend/core/portfolio/: __init__.py  account.py
backend/core/risk/: __init__.py
backend/strategies/: __init__.py  base.py  example_mean_reversion.py
configs/: backend.env.example
docs/: architecture.md  setup.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/lib/: api.ts  utils.ts
frontend/src/test/: setup.ts
tests/: test_health.py
(+14 files in other folders)
