[tool.poetry]
name = "project-signals"
version = "0.1.0"
description = "Paper trading and backtesting platform for Indian equities, futures, and options."
authors = ["Project Signals Team <dev@projectsignals.local>"]
packages = [{ include = "app" }, { include = "core" }, { include = "adapters" }, { include = "strategies" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = "^2.7"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = "^5.0.4"
celery = "^5.4.0"
tenacity = "^8.3.0"
httpx = "^0.27.0"
polars = { version = "^1.1.0", extras = ["pyarrow"] }
numpy = "^2.1.0"
pandas = "^2.2.2"
python-dateutil = "^2.9.0"
loguru = "^0.7.2"
pyjwt = "^2.8.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-dotenv = "^1.0.1"
typing-extensions = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
faker = "^25.0.0"
ruff = "^0.4.9"
mypy = "^1.10.0"
types-redis = "^4.6.0.0"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


